--- a/website/_config.yml
+++ b/website/_config.yml
@@ -18,16 +18,16 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: To dependency hell and back
+email: splashcom.de@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  The work on digital transformation in Germany is ... tedious.
+  Sometimes you want to scream, clamor and smash your keyboard.
+  Instead, I fill this blog with one eye crying and one eye laughing ... 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+#twitter_username: jekyllrb
+github_username:  splashcom
 
 # Build settings
 theme: minima
