--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -36,6 +36,8 @@ jobs:
           destination: ./website/_site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
+        with:
+          path: ./website/_site
 
   # Deployment job
   deploy:
